# movies-app-react

back/: .dockerignore  .env  Dockerfile  pyproject.toml
back/migrations/: env.py
back/migrations/versions/: 7cb5881e2dfa_create_users_table.py
back/src/: main.py
back/src/controllers/v1/: auth_controller.py  users_controller.py
back/src/dao/: user_dao.py
back/src/models/: __init__.py  auth_schemas.py  user_model.py  user_schemas.py
back/src/providers/: auth_provider.py  database_provider.py  jwt_provider.py  settings_provider.py
front/: .htmlhintrc  eslint.config.js  index.html  package-lock.json  package.json
front/src/: App.jsx  main.jsx
front/src/components/: MovieCard.jsx  NavBar.jsx
front/src/context/: MovieContext.jsx
front/src/pages/: Favorites.jsx  Home.jsx
front/src/services/: api.js
